refactor: media 도메인 dead 코드 및 코드 품질 일괄 정리
- PresignedURLController: Collectors.toList() → .toList(), Collectors import 제거
- S3UploadService: Collectors.toList() → .toList()
- PresignedURLService: 미사용 generatePresignedGetUrl() 및 관련 import 제거
- MediaUploadRequest: 서비스에서 한 번도 사용되지 않는 mediaLink 필드 제거